--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="~/Content/Style.css" rel="stylesheet" />
+    <link href="/Content/Style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link href="~/Content/all.css" rel="stylesheet" />
+    <link href="/Content/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
 
@@ -70,7 +70,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active my-2" data-bs-interval="10000">
-                <img style="max-height:700px" src="~/Assets/img/carousel-item-2.jpg" class="d-block w-100" alt="...">
+                <img style="max-height:700px" src="/Assets/img/carousel-item-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption   d-none d-md-block">
                     <div class=" py-2 " >
                         <h2 class="display-6 carousel-heading ">Wholsale Prices</h2>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="carousel-item my-2" data-bs-interval="2000">
-                <img style="max-height:700px" src="~/Assets/img/carousel-item-3.png" class="d-block w-100" alt="...">
+                <img style="max-height:700px" src="/Assets/img/carousel-item-3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="display-6 carousel-heading ">Assurance of Quality</h2>
                     <p class="text-black carousel-para">We sell branded jwellery with hallmark, so that you can shop wihout worries.</p>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="carousel-item my-2">
-                <img style="max-height:700px" src="~/Assets/img/carousel-item-1.jpg" class="d-block w-100" alt="...">
+                <img style="max-height:700px" src="/Assets/img/carousel-item-1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none   d-md-block ">
                     <h2 class="display-6 carousel-heading ">Mega Discounts </h2>
                     <p class=" text-black carousel-para">Discounets like never before.</p>
