--- a/index.html
+++ b/index.html
@@ -7,11 +7,11 @@
 
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
-    <link href="Content/Style.css" rel="stylesheet" />
+    <link href="/Content/Style.css" rel="stylesheet" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
-    <link href="Content/all.css" rel="stylesheet" />
+    <link href="/Content/all.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
    
 
@@ -70,7 +70,7 @@
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active my-2" data-bs-interval="10000">
-                <img style="max-height:700px" src="/Assets/img/carousel-item-2.jpg" class="d-block w-100" alt="...">
+                <img style="max-height:700px" src="Assets/img/carousel-item-2.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption   d-none d-md-block">
                     <div class=" py-2 " >
                         <h2 class="display-6 carousel-heading ">Wholsale Prices</h2>
@@ -80,7 +80,7 @@
                 </div>
             </div>
             <div class="carousel-item my-2" data-bs-interval="2000">
-                <img style="max-height:700px" src="/Assets/img/carousel-item-3.png" class="d-block w-100" alt="...">
+                <img style="max-height:700px" src="Assets/img/carousel-item-3.png" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none d-md-block">
                     <h2 class="display-6 carousel-heading ">Assurance of Quality</h2>
                     <p class="text-black carousel-para">We sell branded jwellery with hallmark, so that you can shop wihout worries.</p>
@@ -88,7 +88,7 @@
                 </div>
             </div>
             <div class="carousel-item my-2">
-                <img style="max-height:700px" src="/Assets/img/carousel-item-1.jpg" class="d-block w-100" alt="...">
+                <img style="max-height:700px" src="Assets/img/carousel-item-1.jpg" class="d-block w-100" alt="...">
                 <div class="carousel-caption d-none   d-md-block ">
                     <h2 class="display-6 carousel-heading ">Mega Discounts </h2>
                     <p class=" text-black carousel-para">Discounets like never before.</p>
@@ -149,7 +149,7 @@
         <div class="p-outer-box ">
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="product-name text-black"> Product Name</span>
                         <p>
@@ -162,7 +162,7 @@
 
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="h-1 text-black"> Product Name</span>
                         <p>
@@ -233,7 +233,7 @@
                     </div>
                 </div>
                 <div class="col-12 col-md-6 px-1 py-2 px-md-2 col card-item  container order-1 order-md-2" style="">
-                    <img class="col-12 m-auto img-fluid" src="/Assets/img/offer_product.jpg" alt="Alternate Text" />
+                    <img class="col-12 m-auto img-fluid" src="Assets/img/offer_product.jpg" alt="Alternate Text" />
                 </div>
 
 
