--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             </div>
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="h-1 text-black"> Product Name</span>
                         <p>
@@ -186,7 +186,7 @@
             </div>
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="h-1 text-black"> Product Name</span>
                         <p>
@@ -255,7 +255,7 @@
         <div class="p-outer-box ">
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="product-name text-black"> Product Name</span>
                         <p>
@@ -268,7 +268,7 @@
 
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="h-1 text-black"> Product Name</span>
                         <p>
@@ -280,7 +280,7 @@
             </div>
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="h-1 text-black"> Product Name</span>
                         <p>
@@ -292,7 +292,7 @@
             </div>
             <div class="p-container border shadow">
                 <div class="pi-container">
-                    <img src="/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
+                    <img src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/products/dummy_product.jpg" alt="Avatar" class="pi">
                     <div class="pi-overlay">
                         <span class="h-1 text-black"> Product Name</span>
                         <p>
@@ -350,7 +350,7 @@
                         </button>
                     </div>
                     <div class="card-item  img-fluid col col-12  order-1 order-md-2 col-md-5  p-3 ">
-                        <img class=" img-fluid col-12 m-1" src="/Assets/img/jewelry-store-about_1920.jpg" alt="Alternate Text" />
+                        <img class=" img-fluid col-12 m-1" src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/img/jewelry-store-about_1920.jpg" alt="Alternate Text" />
                     </div>
                    
                     </div>
@@ -375,7 +375,7 @@
                 <div class=" ">
                     <div class="row container-sm m-auto col-sm-12 ">
                         <div class="col-sm-4 col-12 col p-4 p-sm-1 my-3  ">
-                            <img class="img-fluid mb-3 " src="/Assets/img/BlogsAndEvents/blog_event_3.jpg" alt="Alternate Text" />
+                            <img class="img-fluid mb-3 " src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/img/BlogsAndEvents/blog_event_3.jpg" alt="Alternate Text" />
                             <h5>Takimata invidunt magna dolor dolor</h5>
                             <p>Hendrerit dolore erat consetetur at et sit invidunt accumsan consetetur clita hendrerit takimata eirmod gubergren labore dolor ut in nonumy duis laoreet in in erat et erat ut clita vero</p>
                             <div class="text-center col-12">
@@ -385,7 +385,7 @@
                             </div>
                         </div>
                         <div class="col-sm-4 col-12 col p-sm-1 p-4 my-3  ">
-                            <img class="img-fluid mb-3" src="/Assets/img/BlogsAndEvents/blog_event_1.jpg" alt="Alternate Text" />
+                            <img class="img-fluid mb-3" src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/img/BlogsAndEvents/blog_event_1.jpg" alt="Alternate Text" />
                             <h5>Takimata invidunt magna dolor dolor</h5>
                             <p>Hendrerit dolore erat consetetur at et sit invidunt accumsan consetetur clita hendrerit takimata eirmod gubergren labore dolor ut in nonumy duis laoreet in in erat et erat ut clita vero</p>
                             <div class="text-center col-12">
@@ -396,7 +396,7 @@
 
                         </div>
                         <div class="col-sm-4 col-12 col p-sm-1 p-4 my-3  ">
-                            <img class="img-fluid mb-3" src="/Assets/img/BlogsAndEvents/blog_event_2.jpg" alt="Alternate Text" />
+                            <img class="img-fluid mb-3" src="https://santp92.github.io/kumarjwellerypatna.github.io/Assets/img/BlogsAndEvents/blog_event_2.jpg" alt="Alternate Text" />
                             <h5>Takimata invidunt magna dolor dolor</h5>
                             <p>Hendrerit dolore erat consetetur at et sit invidunt accumsan consetetur clita hendrerit takimata eirmod gubergren labore dolor ut in nonumy duis laoreet in in erat et erat ut clita vero</p>
                             <div class="text-center col-12">
