--- a/index.html
+++ b/index.html
@@ -445,7 +445,7 @@
                             <i class="fa fa-map-marker" aria-hidden="true"></i> Location
                         </h6>
                         <p class="">
-                            10, ABC Road, Patna Jharkhand
+                            10, ABC Road, Patna Bihar
                         </p>
 
                    
