--- a/index.html
+++ b/index.html
@@ -526,7 +526,7 @@
             <div class="col-md-3 col-6 mt-3">
                 <h6> <i class="fa fa-globe" aria-hidden="true"></i> Address</h6>
                 <p>Market Name</p>
-                <p>Area, Patna Jharkhand</p>
+                <p>Area, Patna Bihar</p>
                 <p>Pin ****** </p>
 
             </div>
