names further replaced

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top ">
         <div class="container">
-            <a class="navbar-brand px-3" href="#">Kumar Jewellery</a>
+            <a class="navbar-brand px-3" href="#">Kumar Jewellers</a>
             <button class="navbar-toggler  " type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon "></span>
             </button>
@@ -328,7 +328,7 @@
                 </div>
                 <div class="col col-8 col-sm-9 col-md-10 py-0 py-sm-3">
 
-                    <h1 ><span class="h2">We are</span> <span class="pacifico h-1">Kumar Jewellery</span></h1>
+                    <h1 ><span class="h2">We are</span> <span class="pacifico h-1">Kumar Jewellers</span></h1>
                     <p style="color: cadetblue;">Wholesale Merchent of Gold and Silver</p>
                 </div>
                 <div class="my-2  row  p-3">
