--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    
 
 
-    <title>Hello, world!</title>
+    <title>Kumar Jewellers</title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-white fixed-top ">
